--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
-<!CODETYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Ultra Running</title>
-        <link rel="stylesheet" href="style.css">
+        <link type="text/css" rel="stylesheet" href="style.css">
         
     </head>
         <body>
             <main>
-                <h1 class="heading">Ultra Running</h1>
+                <h1 id="main_title">Ultra Running</h1>
                 <p>If you're interested in running your first ultra-marathon<br>
             but don't know where to start, then you have come to the right<br>
             place.  Below, we will tell you everything you need to know to<br>
-            run your first ultra-marathon</p>
+            run your first ultra-marathon.</p>
                 <ul>
                     <li><a href="#training">Training</a></li>
                     <li><a href="#nutrition">Nutrition</a></li>
